--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "nodemon": "^1.19.2"
   },
   "dependencies": {
-    "dotenv": "^8.1.0"
+    "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1"
   }
 }
